--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,39 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer components {
+  .d-none {
+    display: none;
+  }
+  .arrow {
+    @apply flex absolute h-[30px] w-[30px] hover:bg-gray-700 bg-gray-500 cursor-pointer justify-center items-center rounded-full top-[170px] z-20;
+  }
+  .arrow-left {
+    @apply left-[0px];
+  }
+  .arrow-right {
+    /* @apply ; */
+  }
+  .navbar__item {
+    @apply flex justify-center items-center;
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+* {
+  transition: 0.5s;
+}
+::-webkit-scrollbar {
+  width: 0px;
+  display: none;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+.leftarrow {
+  left: calc(100% - 20px);
 }
